# labathome

./: .gitignore  Bausatz Teilebedarf.xlsx  LICENSE  Lab@home 10 Hardware.txt  New Lab.docx  README.md  firmware_and_networkcomponent.code-workspace  index.html  labathome.code-workspace
ESP32_LABATHOME_PCB_TEST/: platformio.ini
binaries/: manifest.json
case/: Befestigungsplatte Axialventilator Klappenmotor.dxf  Deckel.dxf  Klappe 1.dxf  Platinenhalterung vorne 1.dxf
devtools/: create_defaultfunctionblockdiagram.ts  create_message.py  create_message.ts  defaultfunctionblockdiagram.data  fbexec.data  fbexecutable_generated.ts  package-lock.json  package.json
doc/: Architektur Anforderungen Konfiguration.docx  Doku LabAtHome.docx  FastFourierTransform.xlsx  Introducing Lab@home.pptx  Serialisierungsformat und Konventionen.md
enclosure/: Boden.dxf  Erste Messreihe.xlsx  Platinenhalterung hinten.dxf  Seitenwand 1.dxf  Seitenwand 2.dxf  Trennwand 2.dxf  Zweite Messreihe.xlsx
espidf-component-labathome/: .gitignore  CMakeCache.txt  CMakeLists.txt  Kconfig.projbuild  LICENSE  package-lock.json  package.json
espidf-component-labathome/builder/: builder.db  certificates.ts  gulpfile.ts  gulpfile_config.ts  gulpfile_utils.ts  labathome_settings.json  package-lock.json  package.json  paths.ts  text_to_speech.ts
espidf-component-labathome/builder/esp32/: esp32.ts
espidf-component-labathome/builder/gulpfile_helpers/: certificates.ts  context.ts  database.ts  esp32.ts  espidf.ts  flatbuffers.ts  git.ts  git_infos.ts  google_cloud.ts  gulpfile_utils.ts  labathome.ts  partition_parser.ts  sensact.ts  text_to_speech.ts  usersettings.ts  utils.ts
espidf-component-labathome/cpp/: HAL.hh  HAL_labathomeV10.hh  HAL_labathomeV15.hh  HAL_labathomeV5.hh  HAL_ptnchenV2.hh  devicemanager.cc  devicemanager.hh  functionblocks.hh  http_handlers.cc  ip5306.hh  nau88c22.hh  webmanager.cc  webmanager.hh  webmanager_constants.hh  webmanager_interfaces.hh  winfactboris.hh  winfactboris_messages.hh
espidf-component-labathome/flatbuffers/: canmonitor.fbs  chatbot.fbs  fingerprint.fbs  flowchart.fbs  functionblock.fbs  heaterexperiment.fbs  scheduler.fbs  system.fbs  usersettings.fbs  webmanager.fbs  wifimanager.fbs
espidf-component-labathome/initial_values_todo/: default_fbd.ts
espidf-component-labathome/testserver/: index.ts  package-lock.json  package.json  utils.ts
espidf-component-labathome/testserver/handlers/: chatbot.ts  functionblock.ts  heaterexperiment.ts  system.ts  webmanager.ts
espidf-component-labathome/usersettings/: tsconfig.json
espidf-component-labathome/usersettings/go_here/go_here/: usersettings.ts
espidf-component-labathome/usersettings/typescript/utils/: usersettings_base.ts
espidf-component-labathome/web/: .gitignore  index.html  package-lock.json  package.json  vite.config.mts  vite.config.ts
espidf-component-labathome/web/style/: app.css  chatbot.css  control_loop_experiment.css  dialog.css  flowchart.css
espidf-component-labathome/web/templates/sensact/: sendCommandImplementation.template.ts
espidf-component-labathome/web/typescript/: AirspeedExperimentController.ts  DevelopCFCController.ts  FFTExperimentController.ts  HeaterExperimentController.ts  PtnExperimentController.ts_work_here  app.ts  chatbot.ts  routermenu.ts  screen_controllers_builder.ts  vite-env.d.ts
espidf-component-labathome/web/typescript/dialog_controller/: dialog_controller.ts
espidf-component-labathome/web/typescript/flowchart/: Flowchart.ts  FlowchartConnector.ts  FlowchartData.ts  FlowchartLink.ts  FlowchartOperator.ts  FlowchartOperatorImpl.ts  MenuManager.ts  SimulationContext.ts  SimulationManager.ts  Songs.ts
espidf-component-labathome/web/typescript/screen_controller/: AirspeedExperimentController.ts_work_here  canmonitor_controller.ts  develop_cfc_controller.ts  fingerprint_controller.ts  heater_experiment_controller.ts  racinggame_controller.ts  scheduler_controller.ts  screen_controller.ts  sensact_controller.ts  system_controller.ts  timeseries_controller.ts  usersettings_controller.ts  weblog_controller.ts  wifimanager_controller.ts
espidf-component-labathome/web/typescript/utils/: common.ts  constants.ts  esp32.ts  extensions.ts  interfaces.ts  interfaces_sensact.ts  routermenu.ts  schedule_items.ts  sensact.ts  sensactapps_base.ts  usersettings_base.ts  utils_sensact.ts
espidf-component-labathome/web/vite_plugin/: vite-plugin-singlefile.ts
firmware/: CMakeLists.txt  sdkconfig  sdkconfig.old
labarhome_firmware_arduino/: platformio.ini
labathome-webui2/: README.md  angular.json  package-lock.json  package.json
labathome_borisuserdll/: Demo.bsy  LabAtHome.dpr
labathome_builds/: Test.xlsx
labathome_buildtools/: .gitignore  package-lock.json
labathome_firmware/: .gitignore  CMakeCache.txt  CMakeLists.txt  board_info.json  board_info_example.json  labathome_firmware.code-workspace  partitions.csv  partitions.csv_without_ota  (+4 more)
labathome_firmware/main/: CMakeLists.txt  CMakeLists.txt_test  HAL.hh  HAL_labathomeV10.hh  HAL_labathomeV5.hh  HAL_labathomeV6.hh  HAL_ptnchenV2.hh  HAL_wroverkit.hh  Kconfig.projbuild  WProgram.h  WS2812.hh  common_in_project.hh  common_projectconfig.hh  connect.c  connect.hh  devicemanager.cc  devicemanager.hh  functionblocks.hh  http_handlers.cc  http_handlers.hh  iHAL.hh  idf_component.yml  input_output_id.hh  ip5306.hh  labathomeerror.hh  main.cc  paths_and_files.hh  plcmanager.cc  plcmanager.hh  protocol_examples_common.h  secrets.hh.template  songs.hh  spiffs.cc  spiffs.hh  test.json  test_main.c  winfactboris.hh  winfactboris_messages.hh  ws2812_strip.hh
labathome_firmware/main/hal/: HAL_ptnchenV2_impl.hh  HAL_wroverkit_impl.hh
labathome_firmware/main/hal/05/: hal_impl.hh
labathome_firmware/main/hal/06/: hal_impl.hh
labathome_firmware/main/hal/10/: hal_impl.hh
labathome_firmware/main/hal/15/: hal_impl.hh
labathome_firmware/main/webmanager_plugins/: functionblock_plugin.hh  heaterexperiment_plugin.hh  systeminfo_plugin.hh  usersettings_plugin.hh
labathome_firmware_stm32/cmake/stm32cubemx/: CMakeLists.txt
(+559 files in other folders)
